# oq-platform-taxonomy

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
openquakeplatform_taxonomy/: __init__.py  urls.py  views.py
openquakeplatform_taxonomy/data/: 10-19-units--res2d.html  2-units--duplex--res2a.html  20-49-units-res2e.html  3-4-units-res2b.html  5-9-units-res2c.html  50-units-res2f.html  Latest-possible-date-of-construction-or-retrofit--ypre.html  Upper-and-lower-bound-for-the-date-of-construction-or-retrofit--ybet.html  adjoining-building-on-one-side-bp1.html  adjoining-buildings-on-three-sides-bp3.html  adjoining-buildings-on-two-sides-bp2.html  adobe-blocks-ado.html  agricultural-processing-agr3.html  agriculture--agr.html  agriculture-unknown-type-agr99.html  airport--com10.html  animal-shelter-agr2.html  approximate-date-of-construction-or-retrofit-yapp.html  approximate-height-of-ground-floor-level-above-grade--hfapp.html  approximate-number-of-storeys-above-ground-happ.html  approximate-number-of-storeys-below-ground--hbapp.html  arena-ass2.html  assembly-ass.html  assembly-unknown-type--ass99.html  bamboo--wbb.html  bamboo-cane-or-rope-reinforced-rb.html  bamboo-straw-or-thatch-roof--rwo5.html  basalt--spba.html  bolted-connections-bol.html  braced-frame-lfbr.html  building-occupancy-class-detail.html  building-occupancy-class-general.html  building-position-within-a-block.html  bus-station--com8.html  cast-in-place-beam-supported-reinforced-concrete-floor--fc2.html  cast-in-place-beam-supported-reinforced-concrete-roof-rc2.html  (+350 more)
(+7 files in other folders)
