[build-system]
requires = ["setuptools >= 69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oq-platform-taxonomy"
description = "Taxtonomy - GEM building taxonomy glossary"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10, <3.13"

authors = [
    { name = "GEM Foundation", email = "devops@openquake.org" },
]
maintainers = [
    {name = "GEM Foundation", email = "devops@openquake.org"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Scientists",
    "License :: OSI Approved :: AGPL3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [ "django >=4.2, <5", ]
dynamic = [ "version", ]
[project.urls]
Homepage = "https://github.com/gem/oq-platform-taxonomy"
[tool.setuptools]
packages = [ "openquakeplatform_taxonomy" ]
[tool.setuptools.dynamic]
version = {attr = "openquakeplatform_taxonomy.__version__"}
